# Hapi

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: github-pages-mkdocs.yml  github-release.yml  pypi-release.yml  tests.yml
develop/: 404.html  change-log.html  index.html  license.html  objects.inv  sitemap.xml
develop/api/: calibration.html  catchment.html  dem.html  hbv-bergestrom92.html  hbv-lake.html  hbv.html  inputs.html  routing.html  rrm-parameters.html  run.html  wrapper.html
develop/dev/: Installation.html
develop/examples/: distributed-model-calib.html  distributed-model-run.html  gis-inputs.html  hbv.html  lumped-model-calibration.html  lumped-model-run.html  meteo-inputs.html  muskingum.html  parameters.html
develop/search/: search_index.json
docs/: change-log.md  index.md
docs/api/: calibration.md  catchment.md  dem.md  hbv-bergestrom92.md  hbv-lake.md  hbv.md  inputs.md  routing.md  rrm-parameters.md  run.md  wrapper.md
docs/dev/: Installation.md
docs/examples/: distributed-model-calib.md  distributed-model-run.md  gis-inputs.md  hbv.md  lumped-model-calibration.md  lumped-model-run.md  meteo-inputs.md  muskingum.md  parameters.md
examples/hydrological-model/: HAND_HRUpy.py
examples/hydrological-model/Note books/: Jiboa-distributed-model-muskingum-lake.ipynb  Lumped-Model_Run.ipynb  Lumped_Model_Calib.ipynb  check-03Jiboa-colab.ipynb  check-03Jiboa.ipynb  coello-distributed-model-run-muskingum.ipynb  coello-lumped-model-run-muskingum.ipynb  lumped-model-run-coello.ipynb
examples/hydrological-model/Note books/check-colab/: Jiboa-distributed-model-muskingum-lake-colab.ipynb  Jiboa.ipynb
examples/hydrological-model/coello/calibration/: coello-hrus-distributed-model-calibratation-muskingum.py  coello-lumped-model-calibration-deap-multiobjective-NSE-NSEHF.py  coello-lumped-model-calibration-deap-multiobjective-NSE-RMSE.py  coello-lumped-model-calibration-deap.py  coello-lumped-model-calibration.py  coello-totally-distributed-model-calibratation-muskingum.py
examples/hydrological-model/coello/prepare-Input-data/: 01-coello-prepare_inputdata.py  07-prepare-rasters.py
examples/hydrological-model/coello/run/: coello-distributed-model-run-maxbas.py  coello-lumped-model-run-maxbas.py  coello-lumped-model-run.py
examples/hydrological-model/jiboa/: Jiboa-distributed-model-muskingum-lake.py
examples/hydrological-model/old examples Hapi 0.3.0/: 02calib_model_HRU.py  02calib_model_Lumped.py
examples/plot/: image_plot.ipynb  plot_array.py
main/: 404.html  LICENSE.html  Library_Workflow.xml  change-log.html  index.html  license.html  objects.inv  sitemap.xml
main/New folder/: description.txt
main/api/: calibration.html  catchment.html  dem.html  hbv-bergestrom92.html  hbv-lake.html  hbv.html  inputs.html  routing.html  rrm-parameters.html  run.html  wrapper.html
main/dev/: Installation.html
main/examples/: Lumped_run.md~  distributed-model-calib.html  distributed-model-run.html  gis-inputs.html  hbv.html  lumped-model-calibration.html  lumped-model-run.html  meteo-inputs.html  muskingum.html  parameters.html
main/search/: search_index.json
src/Hapi/: __init__.py  calibration.py  catchment.py  dem.py  hapi_warnings.py  inputs.py  routing.py  run.py  wrapper.py
src/Hapi/parameters/: parameters.py
src/Hapi/rrm/: base_model.py  distrrm.py  hbv.py  hbv_bergestrom92.py  hbv_lake.py  parameters.py
src/hapi/: __init__.py  calibration.py  catchment.py  dem.py  hapi_warnings.py  inputs.py  routing.py  run.py  wrapper.py
src/hapi/parameters/: parameters.py
src/hapi/rrm/: __init__.py  base_model.py  distrrm.py  hbv.py  hbv_bergestrom92.py  hbv_lake.py  parameters.py
tests/: conftest.py  sensitivity_analysis.py  test_dem.py  test_flow_direction_index.py
tests/calibration/: distributed_mode_calib.py  lumped_calibration.py
tests/rrm/: conftest.py  test_dist_parameters.py  test_rrm_inputs.py
tests/rrm/calibration/: test_rrm_calibration.py
tests/rrm/catchment/: conftest.py  test_lake.py  test_rrm_catchment.py
tests/rrm/conceptual/: test_conceptual_models.py
tests/rrm/data/jiboa/: lake-parameters.txt
tests/rrm/parameters/: test_parameters.py  test_parameters_cli.py
tests/run/: distributed_mode_run.py  lumped_run.py
