[project]
name = "HAPI-Nile"
version = "1.7.0"
description = "Distributed hydrological-model"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mostafa Farrag", email = "moah.farag@gmail.com" }
]
license = {text = "GNU General Public License v3"}
keywords = ["Hydrology", "Distributed hydrological model"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">= 3.11, <4"

dependencies = [
    "geopandas >=1.0.1",
    "loguru >=0.7.2",
    "numpy >=2.1.3",
    "pandas >=2.2.3",
    "PyYAML >=6.0.2",
    "pyramids-gis >=0.6.0,!=0.9.0",
    "requests >=2.31.0",
    "scipy >=1.11.4",
    "serapeum-utils >=0.2.0",
    "statista >=0.6.0",
    "Oasis-Optimization >=1.0.3",
    "cleopatra >=0.5.1",
    "matplotlib >=3.7.2"
]

[project.optional-dependencies]
dev = [
    "nbval >=0.11.0",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "pytest >=8.2.2",
    "pytest-cov >= 6.0.0",
    "coverage",
    "build >=1.0.0",
    "twine >=5.0.0",
    "pip",
    "jupyterlab",
    "jupyter",
    "commitizen >=4.8.4",
    "mypy >=1.0"
]

docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs >=1.2",
    "mkdocs-macros-plugin >=1.3.7",
    "mkdocs-table-reader-plugin >=3.1.0",
    "mkdocs-mermaid2-plugin >=1.2.1",
    "jupyter-contrib-nbextensions >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook <7.0"
]

[project.urls]
homepage = "https://github.com/Serapieum-of-alex/Hapi"
repository = "https://github.com/Serapieum-of-alex/Hapi"
documentation = "https://serapieum-of-alex.github.io/Hapi"
Changelog = "https://github.com/Serapieum-of-alex/Hapi/blob/main/docs/change-log.md"

[project.scripts]
download-parameters = "Hapi.parameters.parameters:main"
download-parameter-set = "Hapi.parameters.parameters:main"
list-parameter-names = "Hapi.parameters.parameters:main"


[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["Hapi", "Hapi.*"]

[tool.setuptools.package-data]
Hapi = ["*.yaml", "include/gdal/*.h"]

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "E722", "C901", "E741", "E731"]
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "$version"
changelog_file = "docs/change-log.md"
update_changelog_on_bump = false
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "tests/",
    "examples/",
    "docs/",
]

[[tool.mypy.overrides]]
module = [
    "Hapi.catchment",
    "Hapi.run",
    "Hapi.calibration",
    "Hapi.wrapper",
]
# These modules use a builder pattern: attributes are typed X | None in
# __init__ and populated by separate read_*() methods before use. Methods
# assume attributes are non-None but mypy cannot verify call order.
# Fix: add assert-based narrowing helpers (e.g. _require_spatial_data())
# that return non-None types, then remove these suppressions one by one.
# Error count without overrides: ~257 across these 4 modules.
disable_error_code = [
    "union-attr",    # .attr on X | None (159 sites)
    "attr-defined",  # .attr on None (11 sites)
    "arg-type",      # passing X | None where X expected (13 sites)
    "misc",          # slice index, None not callable (13 sites)
    "operator",      # arithmetic on X | None (4 sites)
    "index",         # indexing X | None (2 sites)
    "call-overload", # numpy overload mismatches on X | None (2 sites)
]

[[tool.mypy.overrides]]
module = "Hapi.rrm.base_model"
disable_error_code = ["empty-body"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "vfs: mark a test as a virtual file system (deselect with '-m \"not vfs\"')",
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
    "fast: mark test as fast (deselect with '-m \"not fast\"')",
    "plot: test plotting function optional package (deselect with '-m \"not plot\"')",
    "e2e: end-to-end test (deselect with '-m \"not e2e\"')",
    "mock: mock test (deselect with '-m \"not mock\"')",
    "integration: integration test (deselect with '-m \"not integration\"')",
    "fig_share: FigShare API test (deselect with '-m \"not fig_share\"')"
]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
HAPI-Nile = { path = ".", editable = true }

[tool.pixi.tasks]
main = { cmd = "pytest -vvv --cov=src/Hapi -sv -m 'not plot and not fig_share' --cov-report=xml", description = "Run the main test suite" }
plot = { cmd = "pytest -vvv --cov=src/Hapi -sv -m 'plot' --cov-report=xml", description = "Run plot test suite" }
test-all = { cmd = "pytest -vvv --cov=src/Hapi -sv -m 'not fig_share' --cov-report=xml --cov-report=term-missing", description = "Run all test suite" }
notebooks = { cmd = "pytest --nbval --nbval-lax --verbose examples/notebooks", description = "Check notebooks" }
build-dist = { cmd = "python -m build", description = "Build sdist and wheel for PyPI" }
publish-pypi = { cmd = "twine upload --non-interactive --repository pypi dist/*", depends-on = ["build-dist"], description = "Build and upload package to PyPI" }
cz-changelog = { cmd = "cz changelog", description = "Generate changelog using Commitizen" }
cz-bump = { cmd = "cz bump", description = "Bump version using Commitizen" }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }
py311 = { features = ["py311", "dev"], solve-group = "py311" }
py312 = { features = ["py312", "dev"], solve-group = "py312" }
py313 = { features = ["py313", "dev"], solve-group = "py313" }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.dependencies]
gdal = ">=3.10.0,<4"
